--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bullishprototype",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@getalby/lightning-tools": "^5.2.0",
     "@nostr-dev-kit/ndk": "^2.14.9",
     "cors": "^2.8.5",
     "express": "^4.21.1"
