--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@getalby/lightning-tools": "^5.2.0",
     "@nostr-dev-kit/ndk": "^2.14.9",
+    "@shocknet/clink-sdk": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.1"
   },
