--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bullishprototype",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -8,11 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@getalby/bitcoin-connect": "^3.11.5",
     "@getalby/lightning-tools": "^5.2.0",
+    "@getalby/sdk": "^7.0.0",
     "@nostr-dev-kit/ndk": "^2.14.9",
     "@shocknet/clink-sdk": "^1.5.1",
+    "bitcoin-qr": "^1.5.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "markdown-it": "^14.1.0",
+    "nostr-tools": "^2.19.4",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "vite": "^5.0.0"
