feat: migrate to React navbar component
- Add React and Vite React plugin
- Convert navbar to reusable React component
- Update all 9 pages to use React navbar
- Implement faster navbar rendering (perceived instant load)
- Bump version to 0.5.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bullishprototype",
-  "version": "0.5.4",
+  "version": "0.5.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
     "vite": "^5.0.0"
   }
 }
