--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.21.1",
     "markdown-it": "^14.1.0",
     "nostr-tools": "^2.19.4",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
